--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -63,7 +63,7 @@ div.content {
 
 <div class="sidebar">
   <a href="home.html">Home</a>
-  <a href="#news">Research Paper</a>
+  <a href="research.html">Research Paper</a>
   <a href="#contact">Contact</a>
   <a href="aboutus.html">About</a>
 </div>
