--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -70,7 +70,7 @@ body {
 
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="#">Professor</a>
+  <a href="professor.html">Professor</a>
   <a href="home.html">Home</a>
   <a href="research.html">Research</a>
   <a href="aboutus.html">AboutUs</a>
