--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -77,9 +77,9 @@ body {
 </div>
 
 <div id="main">
-  <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>  
-  <h2>Collapsed Sidebar</h2>
-  <p>Click on the hamburger menu/bar icon to open the sidebar, and push this content to the right.</p>
+  <button class="openbtn" onclick="openNav()">☰ </button>  
+  <h2>Home Feed</h2>
+  <p>Ye hamari pathyapustak.</p>
 </div>
 
 <script>
