--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -134,16 +134,16 @@ html {
 
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="#">Professor</a>
+    <a href="professor.html">Professor</a>
     <a href="home.html">Home</a>
     <a href="research.html">Research</a>
     <a href="aboutus.html">AboutUs</a>
   </div>
   
   <div id="main">
-    <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>  
-    <h2>Collapsed Sidebar</h2>
-    <p>Click on the hamburger menu/bar icon to open the sidebar, and push this content to the right.</p>
+    <button class="openbtn" onclick="openNav()">☰</button>  
+    <h2>Home Feed</h2>
+    <p>Welcome to Reseachers</p>
   </div>
   
   <script>
