--- a/templates/professor.html
+++ b/templates/professor.html
@@ -245,7 +245,7 @@ body {
   <ul class="card-wrapper">
     <li class="card">
       <img src='https://images.unsplash.com/photo-1610563166150-b34df4f3bcd6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=969&q=80' alt=''>
-      <h3><a href="">CSE</a></h3>
+      <h3><a href="conversion.html">CSE</a></h3>
       <p>Lorem ipsum sit dolor amit</p>
     </li>
     <li class="card">
