--- a/templates/conversion.html
+++ b/templates/conversion.html
@@ -12,48 +12,17 @@
     <h1 align="center">CSV File to HTML Table Using AJAX jQuery</h1>
     <br />
     <div align="center">
+    <a href='table.html'>
      <button type="button" name="load_data" id="load_data" class="btn btn-info">Load Data</button>
+     </a>
     </div>
     <br />
     <div id="employee_table">
     </div>
    </div>
   </div>
+  {% block body %}
+
+{% endblock  %}
  </body>
 </html>
-
-<script>
-$(document).ready(function(){
- $('#load_data').click(function(){
-  $.ajax({
-   url:"employee.csv",
-   dataType:"text",
-   success:function(data)
-   {
-    var employee_data = data.split(/\r?\n|\r/);
-    var table_data = '<table class="table table-bordered table-striped">';
-    for(var count = 0; count<employee_data.length; count++)
-    {
-     var cell_data = employee_data[count].split(",");
-     table_data += '<tr>';
-     for(var cell_count=0; cell_count<cell_data.length; cell_count++)
-     {
-      if(count === 0)
-      {
-       table_data += '<th>'+cell_data[cell_count]+'</th>';
-      }
-      else
-      {
-       table_data += '<td>'+cell_data[cell_count]+'</td>';
-      }
-     }
-     table_data += '</tr>';
-    }
-    table_data += '</table>';
-    $('#employee_table').html(table_data);
-   }
-  });
- });
- 
-});
-</script>
