--- a/templates/research.html
+++ b/templates/research.html
@@ -152,7 +152,7 @@ html {
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
     <a href="professor.html">Professor</a>
-    <a href="home.html">Home</a>
+    <a href="">Home</a>
     <a href="research.html">Research</a>
     <a href="aboutus.html">AboutUs</a>
   </div>
