--- a/templates/professor.html
+++ b/templates/professor.html
@@ -245,33 +245,32 @@ body {
   <ul class="card-wrapper">
     <li class="card">
       <img src='https://images.unsplash.com/photo-1610563166150-b34df4f3bcd6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=969&q=80' alt=''>
-      <h3><a href="Csestatic.html">CSE</a></h3>
-      <p>Lorem ipsum sit dolor amit</p>
+      <h3><a href=""><p style="text-align:center">CSE</p></a></h3>
+      
     </li>
     <li class="card">
       <img src='https://images.unsplash.com/photo-1517077304055-6e89abbf09b0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80' alt=''>
-      <h3><a href="">ECE</a></h3>
-      <p>Lorem ipsum sit dolor amit</p>
-    </li>
+      <h3><a href=""><p style="text-align:center">ECE</p></a></h3>
+      
     <li class="card">
       <img src='https://images.unsplash.com/photo-1585166059782-f28143545183?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80' alt=''>
-      <h3><a href="">MECHANICAL</a></h3>
-      <p>Lorem ipsum sit dolor amit</p>
+      <h3><a href=""><p style="text-align:center">MECHANICAL</p></a></h3>
+      
     </li>
     <li class="card">
       <img src='https://images.unsplash.com/photo-1554475900-0a0350e3fc7b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=359&q=80' alt=''>
-      <h3><a href="">CHEMICAL</a></h3>
-      <p>Lorem ipsum sit dolor amit</p>
+      <h3><a href=""><p style="text-align:center">CHEMICAL</a></p></h3>
+      
     </li>
     <li class="card">
       <img src='https://images.unsplash.com/photo-1457364847821-58861bbda116?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80' alt=''>
-      <h3><a href="">AEROSPACE</a></h3>
-      <p>Lorem ipsum sit dolor amit</p>
+      <h3><a href=""><p style="text-align:center">AEROSPACE</a></p></h3>
+      
     </li>
     <li class="card">
       <img src='https://images.unsplash.com/photo-1581594549595-35f6edc7b762?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80' alt=''>
-      <h3><a href="">BIOTECHNOLOGY</a></h3>
-      <p>Lorem ipsum sit dolor amit</p>
+      <h3><a href=""><p style="text-align:center">BIOTECHNOLOGY</a></p></h3>
+
     </li>
   </ul>
 </body>
